force-app/main/default/objects/Contact/fields/msf_Direccion_Concat__c.field-meta.xml
<CustomField>
    <fullName>msf_Direccion_Concat__c</fullName>
    <formula>MailingStreet &amp; &quot; &quot; &amp; MailingPostalCode &amp; &quot; &quot; &amp; MailingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direccion Concat</label>
    <type>Text</type>
</CustomField>