force-app/main/default/objects/Contact/fields/msf_Donat1__c.field-meta.xml
<CustomField>
    <fullName>msf_Donat1__c</fullName>
    <label>Donat1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>