force-app/main/default/objects/Contact/fields/msf_Donat3__c.field-meta.xml
<CustomField>
    <fullName>msf_Donat3__c</fullName>
    <label>Donat3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>