force-app/main/default/objects/Contact/fields/msf_DonateEmergency__c.field-meta.xml
<CustomField>
    <fullName>msf_DonateEmergency__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Reactivo emergencias (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>