force-app/main/default/objects/Contact/fields/msf_EmailConcat__c.field-meta.xml
<CustomField>
    <fullName>msf_EmailConcat__c</fullName>
    <description>Concatenación de todos los campos de Email del contacto para realizar la comprobación múltiple en Duplicate Check</description>
    <formula>msf_MainEmail__c &amp; &apos; &apos; &amp; npe01__HomeEmail__c &amp; &apos; &apos; &amp; npe01__AlternateEmail__c &amp; &apos; &apos; &amp; npe01__WorkEmail__c &amp; &apos; &apos; &amp; msf_RestrictedEmail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Concat</label>
    <type>Text</type>
</CustomField>