force-app/main/default/objects/Contact/fields/msf_EndDate__c.field-meta.xml
<CustomField>
    <fullName>msf_EndDate__c</fullName>
    <label>Fecha final</label>
    <type>Date</type>
</CustomField>