force-app/main/default/objects/Contact/fields/msf_EntryCampaign__c.field-meta.xml
<CustomField>
    <fullName>msf_EntryCampaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaña de entrada inicial</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Contactos (Campaña de entrada)</relationshipLabel>
    <relationshipName>Contactos1</relationshipName>
    <type>Lookup</type>
</CustomField>