force-app/main/default/objects/Contact/fields/msf_EntryDateCurrentRecurringDonor__c.field-meta.xml
<CustomField>
    <fullName>msf_EntryDateCurrentRecurringDonor__c</fullName>
    <label>Fecha de la última alta de socio</label>
    <type>Date</type>
</CustomField>