force-app/main/default/objects/Contact/fields/msf_EntryDateCurrentRecurringDonorETL__c.field-meta.xml
<CustomField>
    <fullName>msf_EntryDateCurrentRecurringDonorETL__c</fullName>
    <label>Fecha de la última alta de socio ETL</label>
    <type>Date</type>
</CustomField>