force-app/main/default/objects/Contact/fields/msf_EstimateDonationMultiValue__c.field-meta.xml
<CustomField>
    <fullName>msf_EstimateDonationMultiValue__c</fullName>
    <label>Estimación valor multidonativo</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>