force-app/main/default/objects/Contact/fields/msf_EstimateIncreaseValueTotal__c.field-meta.xml
<CustomField>
    <fullName>msf_EstimateIncreaseValueTotal__c</fullName>
    <label>Estimación Aumento de valor total</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>