force-app/main/default/objects/Contact/fields/msf_EstimateMediumIncrementQ__c.field-meta.xml
<CustomField>
    <fullName>msf_EstimateMediumIncrementQ__c</fullName>
    <label>Estimación incremento de cuota</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;=40</fullName>
            </value>
            <value>
                <fullName>&gt;40</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>