force-app/main/default/objects/Contact/fields/msf_EstimateMultiDonation__c.field-meta.xml
<CustomField>
    <fullName>msf_EstimateMultiDonation__c</fullName>
    <label>Estimación incremento multidonativo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;=50</fullName>
            </value>
            <value>
                <fullName>&gt;50</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>