force-app/main/default/objects/Contact/fields/msf_EstimateNewDonationValue__c.field-meta.xml
<CustomField>
    <fullName>msf_EstimateNewDonationValue__c</fullName>
    <label>Estimación valor nuevo donativo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>