force-app/main/default/objects/Contact/fields/msf_EstimateValueIncreaseQ__c.field-meta.xml
<CustomField>
    <fullName>msf_EstimateValueIncreaseQ__c</fullName>
    <label>Estimación valor aumentado</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>