force-app/main/default/objects/Contact/fields/msf_EthicalCode__c.field-meta.xml
<CustomField>
    <fullName>msf_EthicalCode__c</fullName>
    <label>Código ético</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sector vetado</fullName>
            </value>
            <value>
                <fullName>Sector gris</fullName>
            </value>
            <value>
                <fullName>Sector OK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>