force-app/main/default/objects/Contact/fields/msf_F2FGeneratePDF__c.field-meta.xml
<CustomField>
    <fullName>msf_F2FGeneratePDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generar PDF F2F</label>
    <type>Checkbox</type>
</CustomField>