force-app/main/default/objects/Contact/fields/msf_F2FTemplateNumber__c.field-meta.xml
<CustomField>
    <fullName>msf_F2FTemplateNumber__c</fullName>
    <label>Número del template PDF</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>