force-app/main/default/objects/Contact/fields/msf_FechaCambioLevelEconomico__c.field-meta.xml
<CustomField>
    <fullName>msf_FechaCambioLevelEconomico__c</fullName>
    <label>Fecha cambio de Level económico</label>
    <type>Date</type>
</CustomField>