force-app/main/default/objects/Contact/fields/msf_FechaCambioLevelRelacion__c.field-meta.xml
<CustomField>
    <fullName>msf_FechaCambioLevelRelacion__c</fullName>
    <label>Fecha cambio de Level relación</label>
    <type>Date</type>
</CustomField>