force-app/main/default/objects/Contact/fields/msf_FechaExclusionComunicaciones__c.field-meta.xml
<CustomField>
    <fullName>msf_FechaExclusionComunicaciones__c</fullName>
    <label>E.C. Fecha exclusión comunicaciones</label>
    <type>Date</type>
</CustomField>