force-app/main/default/objects/Contact/fields/msf_FirstAnnualizedQuota__c.field-meta.xml
<CustomField>
    <fullName>msf_FirstAnnualizedQuota__c</fullName>
    <label>Primera Cuota anualizada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>