force-app/main/default/objects/Contact/fields/msf_FirstCampaignColaborationChannel__c.field-meta.xml
<CustomField>
    <fullName>msf_FirstCampaignColaborationChannel__c</fullName>
    <description>Descripción de la campaña asignada a la primera aportación cobrada</description>
    <label>Canal primera campaña colab económica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>