force-app/main/default/objects/Contact/fields/msf_FirstCampaignEntryRecurringDonor__c.field-meta.xml
<CustomField>
    <fullName>msf_FirstCampaignEntryRecurringDonor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primera campaña alta socio</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Contactos (Primera campaña alta socio)</relationshipLabel>
    <relationshipName>FirstCampaignEntryRecurringDonor</relationshipName>
    <type>Lookup</type>
</CustomField>