force-app/main/default/objects/Contact/fields/msf_FirstCampaignRecurringDonorChannel__c.field-meta.xml
<CustomField>
    <fullName>msf_FirstCampaignRecurringDonorChannel__c</fullName>
    <label>Canal campaña de primera alta de socio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>