force-app/main/default/objects/Contact/fields/msf_FirstCampaingColaboration__c.field-meta.xml
<CustomField>
    <fullName>msf_FirstCampaingColaboration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primera campaña de colab económica</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Contactos (Primera campaña de colaboración)</relationshipLabel>
    <relationshipName>Contactos</relationshipName>
    <type>Lookup</type>
</CustomField>