force-app/main/default/objects/Contact/fields/msf_FirstEntryDateRecurringDonor__c.field-meta.xml
<CustomField>
    <fullName>msf_FirstEntryDateRecurringDonor__c</fullName>
    <label>Fecha de primera alta de socio</label>
    <type>Date</type>
</CustomField>