force-app/main/default/objects/Contact/fields/msf_FiscalFirstName__c.field-meta.xml
<CustomField>
    <fullName>msf_FiscalFirstName__c</fullName>
    <description>First name for generate fiscal documents</description>
    <label>Nombre fiscal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>