force-app/main/default/objects/Contact/fields/msf_FiscalLastName1__c.field-meta.xml
<CustomField>
    <fullName>msf_FiscalLastName1__c</fullName>
    <description>last name for generate fiscal documents</description>
    <label>Apellido fiscal 1</label>
    <length>70</length>
    <type>Text</type>
</CustomField>