force-app/main/default/objects/Contact/fields/msf_FiscalLastName2__c.field-meta.xml
<CustomField>
    <fullName>msf_FiscalLastName2__c</fullName>
    <description>suffix for generate fiscal documents</description>
    <label>Apellido fiscal 2</label>
    <length>70</length>
    <type>Text</type>
</CustomField>