force-app/main/default/objects/Contact/fields/msf_fiscalNif__c.field-meta.xml
<CustomField>
    <fullName>msf_fiscalNif__c</fullName>
    <label>NIF fiscal</label>
    <length>20</length>
    <type>Text</type>
</CustomField>