force-app/main/default/objects/Contact/fields/msf_FiscalRecurringDonor__c.field-meta.xml
<CustomField>
    <fullName>msf_FiscalRecurringDonor__c</fullName>
    <formula>IF(msf_OppFiscalAmount4YearsAgo__c &gt;= 0 &amp;&amp; msf_OppFiscalAmount4YearsAgo__c &lt;= msf_OppFiscalAmount3YearsAgo__c , 
   IF(msf_OppFiscalAmount3YearsAgo__c &gt; 0 &amp;&amp; msf_OppFiscalAmount3YearsAgo__c &lt;= msf_OppFiscalAmount2YearsAgo__c , 
      IF(msf_OppFiscalAmount2YearsAgo__c &gt; 0 &amp;&amp; msf_OppFiscalAmount2YearsAgo__c &lt;= msf_OppFiscalAmountLastYear__c , 
         IF(msf_OppFiscalAmountLastYear__c &gt; 0, &apos;1_Si&apos;, 
           &apos;2_No&apos;), 
       &apos;2_No&apos;) , 
    &apos;2_No&apos;), 
&apos;2_No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Es recurrente fiscal</label>
    <type>Text</type>
</CustomField>