force-app/main/default/objects/Contact/fields/msf_Forced__c.field-meta.xml
<CustomField>
    <fullName>msf_Forced__c</fullName>
    <inlineHelpText>Implica cambio de level o programa.</inlineHelpText>
    <label>Level de relación o programa forzado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>121</fullName>
            </value>
            <value>
                <fullName>12Few</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>