force-app/main/default/objects/Contact/fields/msf_FrecuencyDonorCont__c.field-meta.xml
<CustomField>
    <fullName>msf_FrecuencyDonorCont__c</fullName>
    <label>Frecuencia de donante (cont)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>