force-app/main/default/objects/Contact/fields/msf_FrecuencyDonorDesc__c.field-meta.xml
<CustomField>
    <fullName>msf_FrecuencyDonorDesc__c</fullName>
    <description>Frecuencia de donante (desc)</description>
    <formula>if(msf_FrecuencyDonorCont__c == 0, $Label.MSF_F_FIELDS_CONTACT_NONE,
if(msf_FrecuencyDonorCont__c == 1, &quot;1 &quot; + $Label.MSF_F_FIELDS_CONTACT_DONATIVE_SINGULAR,
if(msf_FrecuencyDonorCont__c &lt; 5, TEXT(msf_FrecuencyDonorCont__c) + &quot; &quot; + $Label.MSF_F_FIELDS_CONTACT_DONATIVE_PLURAL,
if(msf_FrecuencyDonorCont__c &gt;= 5, &quot;5 y 5+ &quot; + $Label.MSF_F_FIELDS_CONTACT_DONATIVE_PLURAL, $Label.MSF_F_FIELDS_CONTACT_NONE))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Frecuencia de donante (desc)</label>
    <type>Text</type>
</CustomField>