force-app/main/default/objects/Contact/fields/msf_FrequencyDonorScore__c.field-meta.xml
<CustomField>
    <fullName>msf_FrequencyDonorScore__c</fullName>
    <formula>if(msf_FrecuencyDonorCont__c &lt; 0, 0, 
if(msf_FrecuencyDonorCont__c &lt; 5, msf_FrecuencyDonorCont__c, 5))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Frecuencia de donante (punt)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>