force-app/main/default/objects/Contact/fields/msf_FundationType__c.field-meta.xml
<CustomField>
    <fullName>msf_FundationType__c</fullName>
    <label>Tipo Fundación</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>msf_OrganizationType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Familiar</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Empresarial</fullName>
                <isActive>false</isActive>
                <label>Empresarial</label>
            </value>
            <value>
                <fullName>Familiar_corporate</fullName>
                <isActive>false</isActive>
                <label>Familiar / Corporate</label>
            </value>
            <value>
                <fullName>Privada</fullName>
                <isActive>false</isActive>
                <label>Privada</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>