force-app/main/default/objects/Contact/fields/msf_HasFirstDonation__c.field-meta.xml
<CustomField>
    <fullName>msf_HasFirstDonation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primer donativo</label>
    <type>Checkbox</type>
</CustomField>