force-app/main/default/objects/Contact/fields/msf_HasFirstNewRecurringDonation__c.field-meta.xml
<CustomField>
    <fullName>msf_HasFirstNewRecurringDonation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primera alta socio</label>
    <type>Checkbox</type>
</CustomField>