force-app/main/default/objects/Contact/fields/msf_HasWelcomeDonor__c.field-meta.xml
<CustomField>
    <fullName>msf_HasWelcomeDonor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bienvenida Donante</label>
    <type>Checkbox</type>
</CustomField>