force-app/main/default/objects/Contact/fields/msf_HasWelcomeRecurringDonor__c.field-meta.xml
<CustomField>
    <fullName>msf_HasWelcomeRecurringDonor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bienvenida Socio</label>
    <type>Checkbox</type>
</CustomField>