force-app/main/default/objects/Contact/fields/msf_HomeEmailBackup__c.field-meta.xml
<CustomField>
    <fullName>msf_HomeEmailBackup__c</fullName>
    <label>Email alternativo 1 (Backup)</label>
    <type>Email</type>
</CustomField>