force-app/main/default/objects/Contact/fields/msf_HomePhoneBackup__c.field-meta.xml
<CustomField>
    <fullName>msf_HomePhoneBackup__c</fullName>
    <label>Fijo Principal (Backup)</label>
    <type>Phone</type>
</CustomField>