force-app/main/default/objects/Contact/fields/msf_IncomeLevel__c.field-meta.xml
<CustomField>
    <fullName>msf_IncomeLevel__c</fullName>
    <label>Nivel de ingresos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>