force-app/main/default/objects/Contact/fields/msf_InternalLanguage__c.field-meta.xml
<CustomField>
    <fullName>msf_InternalLanguage__c</fullName>
    <formula>IF( ISPICKVAL( msf_LanguagePreferer__c , &apos;CAT&apos;) ,&apos;CAT&apos;,&apos;ESP&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Idioma interno MSF</label>
    <type>Text</type>
</CustomField>