force-app/main/default/objects/Contact/fields/msf_IsActive__c.field-meta.xml
<CustomField>
    <fullName>msf_IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Es activo</label>
    <type>Checkbox</type>
</CustomField>