force-app/main/default/objects/Contact/fields/msf_isActiveDonor__c.field-meta.xml
<CustomField>
    <fullName>msf_isActiveDonor__c</fullName>
    <description>One Off Donor is active or no</description>
    <label>Es donante</label>
    <length>50</length>
    <type>Text</type>
</CustomField>