force-app/main/default/objects/Contact/fields/msf_IsActiveRecurringDonor__c.field-meta.xml
<CustomField>
    <fullName>msf_IsActiveRecurringDonor__c</fullName>
    <description>Recurrent Donor is active or no</description>
    <label>Es socio</label>
    <length>50</length>
    <type>Text</type>
</CustomField>