force-app/main/default/objects/Contact/fields/msf_IsAssosiative__c.field-meta.xml
<CustomField>
    <fullName>msf_IsAssosiative__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es asociado</label>
    <type>Checkbox</type>
</CustomField>