force-app/main/default/objects/Contact/fields/msf_IsInfluencer__c.field-meta.xml
<CustomField>
    <fullName>msf_IsInfluencer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es influencer</label>
    <type>Checkbox</type>
</CustomField>