force-app/main/default/objects/Contact/fields/msf_IslaMailingAddress__c.field-meta.xml
<CustomField>
    <fullName>msf_IslaMailingAddress__c</fullName>
    <label>Isla</label>
    <length>255</length>
    <type>Text</type>
</CustomField>