force-app/main/default/objects/Contact/fields/msf_IslaOtherAddress__c.field-meta.xml
<CustomField>
    <fullName>msf_IslaOtherAddress__c</fullName>
    <label>Isla otra dirección</label>
    <length>255</length>
    <type>Text</type>
</CustomField>