force-app/main/default/objects/Contact/fields/msf_IsMediaContact__c.field-meta.xml
<CustomField>
    <fullName>msf_IsMediaContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es contacto de medios</label>
    <type>Checkbox</type>
</CustomField>