force-app/main/default/objects/Contact/fields/msf_IsPeerToPeerHelper__c.field-meta.xml
<CustomField>
    <fullName>msf_IsPeerToPeerHelper__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Peer To Peer Helper</label>
    <type>Checkbox</type>
</CustomField>