force-app/main/default/objects/Contact/fields/msf_IsPrimary__c.field-meta.xml
<CustomField>
    <fullName>msf_IsPrimary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es contacto principal</label>
    <type>Checkbox</type>
</CustomField>