force-app/main/default/objects/Contact/fields/msf_IsPublicPerson__c.field-meta.xml
<CustomField>
    <fullName>msf_IsPublicPerson__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Implica exclusión programa de prospectos.</inlineHelpText>
    <label>Es persona pública</label>
    <type>Checkbox</type>
</CustomField>