force-app/main/default/objects/Contact/fields/msf_IsReceiveNewsletter__c.field-meta.xml
<CustomField>
    <fullName>msf_IsReceiveNewsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recibir boletín</label>
    <type>Checkbox</type>
</CustomField>