force-app/main/default/objects/Contact/fields/msf_IsStrategic__c.field-meta.xml
<CustomField>
    <fullName>msf_IsStrategic__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Implica cambio de level o programa.</inlineHelpText>
    <label>Es estratégico</label>
    <type>Checkbox</type>
</CustomField>