force-app/main/default/objects/Contact/fields/msf_LanguagePreferer__c.field-meta.xml
<CustomField>
    <fullName>msf_LanguagePreferer__c</fullName>
    <inlineHelpText>Al modificar el idioma, asegura que está marcado el check en el campo ‘Idioma confirmado’, de lo contrario no se guardará correctamente.</inlineHelpText>
    <label>Idioma de preferencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ESP</fullName>
                <default>true</default>
                <label>ESP</label>
            </value>
            <value>
                <fullName>CAT</fullName>
            </value>
            <value>
                <fullName>GAL</fullName>
            </value>
            <value>
                <fullName>EUS</fullName>
            </value>
            <value>
                <fullName>ING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>