force-app/main/default/objects/Contact/fields/msf_LastAnnualizedQuota__c.field-meta.xml
<CustomField>
    <fullName>msf_LastAnnualizedQuota__c</fullName>
    <label>Última cuota anualizada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>