force-app/main/default/objects/Contact/fields/msf_LastAnnualizedQuotaNotCurrency__c.field-meta.xml
<CustomField>
    <fullName>msf_LastAnnualizedQuotaNotCurrency__c</fullName>
    <formula>msf_LastAnnualizedQuota__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Última cuota anualizada sin divisa</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>