force-app/main/default/objects/Contact/fields/msf_LastDonationUnique__c.field-meta.xml
<CustomField>
    <fullName>msf_LastDonationUnique__c</fullName>
    <label>Fecha de última donación unica</label>
    <type>Date</type>
</CustomField>