force-app/main/default/objects/Contact/fields/msf_LastModificationChannel__c.field-meta.xml
<CustomField>
    <fullName>msf_LastModificationChannel__c</fullName>
    <label>Último canal de modificación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MSF_ModificationChannel</valueSetName>
    </valueSet>
</CustomField>