force-app/main/default/objects/Contact/fields/msf_LastRecurringDonationDate__c.field-meta.xml
<CustomField>
    <fullName>msf_LastRecurringDonationDate__c</fullName>
    <label>Fecha de última baja</label>
    <type>Date</type>
</CustomField>