force-app/main/default/objects/Contact/fields/msf_LastRecurringDonationDateETL__c.field-meta.xml
<CustomField>
    <fullName>msf_LastRecurringDonationDateETL__c</fullName>
    <label>Fecha de última baja ETL</label>
    <type>Date</type>
</CustomField>