force-app/main/default/objects/Contact/fields/msf_LastYearDonorValue__c.field-meta.xml
<CustomField>
    <fullName>msf_LastYearDonorValue__c</fullName>
    <label>Valor de último año de donante</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>