force-app/main/default/objects/Contact/fields/msf_LeadSource2Level__c.field-meta.xml
<CustomField>
    <fullName>msf_LeadSource2Level__c</fullName>
    <label>Canal de entrada inicial MSF 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MSF_LeadSource2</valueSetName>
    </valueSet>
</CustomField>