force-app/main/default/objects/Contact/fields/msf_LegacyConfidentiality__c.field-meta.xml
<CustomField>
    <fullName>msf_LegacyConfidentiality__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solicita Confidencialidad Herencias</label>
    <type>Checkbox</type>
</CustomField>