force-app/main/default/objects/Contact/fields/msf_Level__c.field-meta.xml
<CustomField>
    <fullName>msf_Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Level económico</label>
    <referenceTo>npsp__Level__c</referenceTo>
    <relationshipLabel>Contactos</relationshipLabel>
    <relationshipName>Contactos</relationshipName>
    <type>Lookup</type>
</CustomField>