force-app/main/default/objects/Contact/fields/msf_LevelAmountCurrentFiscalYear__c.field-meta.xml
<CustomField>
    <fullName>msf_LevelAmountCurrentFiscalYear__c</fullName>
    <formula>msf_LevelHCCurrentFiscalYear__c + msf_LevelSCCurrentFiscalYear__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(Level) Importe año fiscal en curso</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>