force-app/main/default/objects/Contact/fields/msf_LevelAmountLifetime__c.field-meta.xml
<CustomField>
    <fullName>msf_LevelAmountLifetime__c</fullName>
    <formula>msf_LevelHCLifetime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(Level) Importe lifetime</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>