force-app/main/default/objects/Contact/fields/msf_LevelAmountNextFiscalYear__c.field-meta.xml
<CustomField>
    <fullName>msf_LevelAmountNextFiscalYear__c</fullName>
    <formula>msf_LevelHCNextFiscalYear__c + msf_LevelSCNextFiscalYear__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(Level) Importe próximo año fiscal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>