force-app/main/default/objects/Contact/fields/msf_LevelAmountOneFiscalYearAgo__c.field-meta.xml
<CustomField>
    <fullName>msf_LevelAmountOneFiscalYearAgo__c</fullName>
    <formula>msf_LevelHCOneFiscalYearAgo__c + msf_LevelSCOneFiscalYearAgo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(Level) Importe año fiscal anterior</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>