force-app/main/default/objects/Contact/fields/msf_LevelAmountTwoFiscalYearsAgo__c.field-meta.xml
<CustomField>
    <fullName>msf_LevelAmountTwoFiscalYearsAgo__c</fullName>
    <formula>msf_LevelHCTwoFiscalYearsAgo__c + msf_LevelSCTwoFiscalYearsAgo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(Level) Importe hace dos años fiscales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>