force-app/main/default/objects/Contact/fields/msf_LevelHCLastTwelveMonths__c.field-meta.xml
<CustomField>
    <fullName>msf_LevelHCLastTwelveMonths__c</fullName>
    <defaultValue>0</defaultValue>
    <label>(Level) H.Credit últimos 12 meses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>