force-app/main/default/objects/Contact/fields/msf_LevelHCLifetime__c.field-meta.xml
<CustomField>
    <fullName>msf_LevelHCLifetime__c</fullName>
    <defaultValue>0</defaultValue>
    <label>(Level) H.Credit Lifetime</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>