force-app/main/default/objects/Contact/fields/msf_LevelHCNextFiscalYear__c.field-meta.xml
<CustomField>
    <fullName>msf_LevelHCNextFiscalYear__c</fullName>
    <defaultValue>0</defaultValue>
    <label>(Level) H.Credit próximo año fiscal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>