force-app/main/default/objects/Contact/fields/msf_LevelHCTwoFiscalYearsAgo__c.field-meta.xml
<CustomField>
    <fullName>msf_LevelHCTwoFiscalYearsAgo__c</fullName>
    <defaultValue>0</defaultValue>
    <label>(Level) H.Credit hace dos años fiscales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>