force-app/main/default/objects/Contact/fields/msf_LevelRelationshipScore__c.field-meta.xml
<CustomField>
    <fullName>msf_LevelRelationshipScore__c</fullName>
    <description>Campo a partir del cual se calcula el nivel de relación: (10-None; 20-One to many; 30-One to few; 40-One to few+; 50-One to one )</description>
    <label>(Level) Relationship Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>