force-app/main/default/objects/Contact/fields/msf_LevelSCCurrentFiscalYear__c.field-meta.xml
<CustomField>
    <fullName>msf_LevelSCCurrentFiscalYear__c</fullName>
    <defaultValue>0</defaultValue>
    <label>(Level) S.Credit año fiscal en curso</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>