force-app/main/default/objects/Contact/fields/msf_LevelScore__c.field-meta.xml
<CustomField>
    <fullName>msf_LevelScore__c</fullName>
    <description>Campo a partir del cual se calcula el level: (1-NADA; 40-MASS; 60-MID; 80-MID+; 100-BIG)</description>
    <label>(Level) Economic Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>