force-app/main/default/objects/Contact/fields/msf_LifeMap__c.field-meta.xml
<CustomField>
    <fullName>msf_LifeMap__c</fullName>
    <label>Detalle de años de actividad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>