force-app/main/default/objects/Contact/fields/msf_LifeTime__c.field-meta.xml
<CustomField>
    <fullName>msf_LifeTime__c</fullName>
    <label>Vida útil</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>