force-app/main/default/objects/Contact/fields/msf_LTVCont__c.field-meta.xml
<CustomField>
    <fullName>msf_LTVCont__c</fullName>
    <label>Lifetime Value (cont)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>